Fixed "disappearing" trackers and added "Rename" button inside Download properties dialog.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@9238 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/default-af.xml
+++ b/Languages/default-af.xml
@@ -4505,7 +4505,7 @@
 		<dialog name="CTorrentFilesPage" cookie="Sy" caption="Lêers">
 			<control/>
 		</dialog>
-		<dialog name="CTorrentTrackersPage" cookie="EdEdEdCoBuSyStBuStStStBuBu" caption="Trackers">
+		<dialog name="CTorrentTrackersPage" cookie="EdEdEdCoBuSyStBuStStStBuBuBu" caption="Trackers">
 			<control/>
 			<control/>
 			<control/>
@@ -4517,6 +4517,7 @@
 			<control caption="Incomplete:"/>
 			<control caption="Incomplete:"/>
 			<control caption="_Refresh"/>
+			<control/>
 			<control/>
 			<control/>
 		</dialog>
