--- a/Languages/default-chs.xml
+++ b/Languages/default-chs.xml
@@ -4481,7 +4481,7 @@
 		<dialog name="CTorrentFilesPage" cookie="Sy" caption="文件">
 			<control/>
 		</dialog>
-		<dialog name="CTorrentTrackersPage" cookie="EdEdEdCoBuSyStBuStStStBuBu" caption="Trackers">
+		<dialog name="CTorrentTrackersPage" cookie="EdEdEdCoBuSyStBuStStStBuBuBu" caption="Trackers">
 			<control/>
 			<control/>
 			<control/>
@@ -4493,6 +4493,7 @@
 			<control caption="完整的 (种子):"/>
 			<control caption="不完整的:"/>
 			<control caption="Tracker 模式:"/>
+			<control/>
 			<control/>
 			<control/>
 		</dialog>
