--- a/Languages/default-es.xml
+++ b/Languages/default-es.xml
@@ -4497,7 +4497,7 @@ puede comenzar a transferir en cualquier momento.</text>
 		<dialog name="CTorrentFilesPage" cookie="Sy" caption="Archivos">
 			<control/>
 		</dialog>
-		<dialog name="CTorrentTrackersPage" cookie="EdEdEdCoBuSyStBuStStStBuBu" caption="Trackers(Rastreadores)">
+		<dialog name="CTorrentTrackersPage" cookie="EdEdEdCoBuSyStBuStStStBuBuBu" caption="Trackers(Rastreadores)">
 			<control/>
 			<control/>
 			<control/>
@@ -4509,6 +4509,7 @@ puede comenzar a transferir en cualquier momento.</text>
 			<control caption="Completados (Seeds):"/>
 			<control caption="Incompleto:"/>
 			<control caption="Modo del tracker:"/>
+			<control/>
 			<control/>
 			<control/>
 		</dialog>
