--- a/Languages/default-nl.xml
+++ b/Languages/default-nl.xml
@@ -4500,7 +4500,7 @@
 		<dialog name="CTorrentFilesPage" cookie="Sy" caption="Bestanden">
 			<control/>
 		</dialog>
-		<dialog name="CTorrentTrackersPage" cookie="EdEdEdCoBuSyStBuStStStBuBu" caption="Trackers">
+		<dialog name="CTorrentTrackersPage" cookie="EdEdEdCoBuSyStBuStStStBuBuBu" caption="Trackers">
 			<control/>
 			<control/>
 			<control/>
@@ -4512,6 +4512,7 @@
 			<control caption="Incomplete:"/>
 			<control caption="Incompleet:"/>
 			<control caption="_Refresh"/>
+			<control/>
 			<control/>
 			<control/>
 		</dialog>
