--- a/Languages/default-pt-br.xml
+++ b/Languages/default-pt-br.xml
@@ -4505,7 +4505,7 @@ pasta dos arquivos baixados a sua biblioteca agora?"/>
 		<dialog name="CTorrentFilesPage" cookie="Sy" caption="Arquivos">
 			<control/>
 		</dialog>
-		<dialog name="CTorrentTrackersPage" cookie="EdEdEdCoBuSyStBuStStStBuBu" caption="Trackers">
+		<dialog name="CTorrentTrackersPage" cookie="EdEdEdCoBuSyStBuStStStBuBuBu" caption="Trackers">
 			<control/>
 			<control/>
 			<control/>
@@ -4517,6 +4517,7 @@ pasta dos arquivos baixados a sua biblioteca agora?"/>
 			<control caption="Completados (Seeds):"/>
 			<control caption="Incompletos:"/>
 			<control caption="Modo Tracker:"/>
+			<control/>
 			<control/>
 			<control/>
 		</dialog>
