--- a/Languages/default-sv.xml
+++ b/Languages/default-sv.xml
@@ -4496,7 +4496,7 @@ Du kan undersöka varje källa för att se hur högt upp i kön du befinner dig.
 		<dialog name="CTorrentFilesPage" cookie="Sy" caption="Filer">
 			<control/>
 		</dialog>
-		<dialog name="CTorrentTrackersPage" cookie="EdEdEdCoBuSyStBuStStStBuBu" caption="Trackers">
+		<dialog name="CTorrentTrackersPage" cookie="EdEdEdCoBuSyStBuStStStBuBuBu" caption="Trackers">
 			<control/>
 			<control/>
 			<control/>
@@ -4508,6 +4508,7 @@ Du kan undersöka varje källa för att se hur högt upp i kön du befinner dig.
 			<control caption="Ofullständiga:"/>
 			<control caption="Incomplete:"/>
 			<control caption="_Uppdatera"/>
+			<control/>
 			<control/>
 			<control/>
 		</dialog>
