--- a/Languages/default-de.xml
+++ b/Languages/default-de.xml
@@ -4496,7 +4496,7 @@
 		<dialog name="CTorrentFilesPage" cookie="Sy" caption="Dateien">
 			<control/>
 		</dialog>
-		<dialog name="CTorrentTrackersPage" cookie="EdEdEdCoBuSyStBuStStStBuBu" caption="Tracker">
+		<dialog name="CTorrentTrackersPage" cookie="EdEdEdCoBuSyStBuStStStBuBuBu" caption="Tracker">
 			<control/>
 			<control/>
 			<control/>
@@ -4508,6 +4508,7 @@
 			<control caption="Vollständig (Seeds):"/>
 			<control caption="Unvollständig (Leecher):"/>
 			<control caption="Tracker-Modus:"/>
+			<control/>
 			<control/>
 			<control/>
 		</dialog>
