--- a/Languages/default-fi.xml
+++ b/Languages/default-fi.xml
@@ -4498,7 +4498,7 @@
 		<dialog name="CTorrentFilesPage" cookie="Sy" caption="Files">
 			<control/>
 		</dialog>
-		<dialog name="CTorrentTrackersPage" cookie="EdEdEdCoBuSyStBuStStStBuBu" caption="Trackers">
+		<dialog name="CTorrentTrackersPage" cookie="EdEdEdCoBuSyStBuStStStBuBuBu" caption="Trackers">
 			<control/>
 			<control/>
 			<control/>
@@ -4510,6 +4510,7 @@
 			<control caption="Completed (Seeds):"/>
 			<control caption="Incomplete:"/>
 			<control caption="Tracker Mode:"/>
+			<control/>
 			<control/>
 			<control/>
 		</dialog>
