--- a/Languages/default-hr.xml
+++ b/Languages/default-hr.xml
@@ -4494,7 +4494,7 @@
 		<dialog name="CTorrentFilesPage" cookie="Sy" caption="Datoteke">
 			<control/>
 		</dialog>
-		<dialog name="CTorrentTrackersPage" cookie="EdEdEdCoBuSyStBuStStStBuBu" caption="Trackers">
+		<dialog name="CTorrentTrackersPage" cookie="EdEdEdCoBuSyStBuStStStBuBuBu" caption="Trackers">
 			<control/>
 			<control/>
 			<control/>
@@ -4506,6 +4506,7 @@
 			<control caption="Incomplete:"/>
 			<control caption="Incomplete:"/>
 			<control caption="_Refresh"/>
+			<control/>
 			<control/>
 			<control/>
 		</dialog>
