Added menu item "Copy URI" to seeding torrents.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@9327 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/default-ca.xml
+++ b/Languages/default-ca.xml
@@ -1108,6 +1108,9 @@
 		<menu name="CDownloadsWnd.Seeding">
 			<item id="ID_DOWNLOADS_LAUNCH_COMPLETE" text="_Obre o reprodueix"/>
 			<item id="ID_DOWNLOADS_CLEAR_COMPLETE" text="_Atura el sembrat"/>
+			<separator/>
+			<item id="ID_DOWNLOADS_COPY" text="Copia _URI"/>
+			<separator/>
 			<item id="ID_DOWNLOADS_HELP" text="_Ajuda..."/>
 			<separator/>
 			<item id="ID_DOWNLOADS_EDIT" text="_Informació..."/>
