--- a/Languages/default-nl.xml
+++ b/Languages/default-nl.xml
@@ -1108,6 +1108,9 @@
 		<menu name="CDownloadsWnd.Seeding">
 			<item id="ID_DOWNLOADS_LAUNCH_COMPLETE" text="_Openen of afspelen"/>
 			<item id="ID_DOWNLOADS_CLEAR_COMPLETE" text="_Stop het uitzaaien"/>
+			<separator/>
+			<item id="ID_DOWNLOADS_COPY" text="_URI kopiëren"/>
+			<separator/>
 			<item id="ID_DOWNLOADS_HELP" text="_Help..."/>
 			<separator/>
 			<item id="ID_DOWNLOADS_EDIT" text="_Torrentinformatie..."/>
