--- a/Languages/default-af.xml
+++ b/Languages/default-af.xml
@@ -1108,6 +1108,9 @@
 		<menu name="CDownloadsWnd.Seeding">
 			<item id="ID_DOWNLOADS_LAUNCH_COMPLETE" text="_Open of Speel"/>
 			<item id="ID_DOWNLOADS_CLEAR_COMPLETE" text="_Hou op Saai"/>
+			<separator/>
+			<item id="ID_DOWNLOADS_COPY" text="Kopieer _URI"/>
+			<separator/>
 			<item id="ID_DOWNLOADS_HELP" text="_Hulp..."/>
 			<separator/>
 			<item id="ID_DOWNLOADS_EDIT" text="_Properties..."/>
