--- a/Languages/default-ar.xml
+++ b/Languages/default-ar.xml
@@ -1108,6 +1108,9 @@
 		<menu name="CDownloadsWnd.Seeding">
 			<item id="ID_DOWNLOADS_LAUNCH_COMPLETE" text="_فتح او تشغيل"/>
 			<item id="ID_DOWNLOADS_CLEAR_COMPLETE" text="_إيقاف الإرسال"/>
+			<separator/>
+			<item id="ID_DOWNLOADS_COPY" text="نسخ _رابط"/>
+			<separator/>
 			<item id="ID_DOWNLOADS_HELP" text="_تعليمات..."/>
 			<separator/>
 			<item id="ID_DOWNLOADS_EDIT" text="_معلومات"/>
