--- a/Languages/default-chs.xml
+++ b/Languages/default-chs.xml
@@ -1108,6 +1108,9 @@
 		<menu name="CDownloadsWnd.Seeding">
 			<item id="ID_DOWNLOADS_LAUNCH_COMPLETE" text="打开或播放(_O)"/>
 			<item id="ID_DOWNLOADS_CLEAR_COMPLETE" text="停止做种(_S)"/>
+			<separator/>
+			<item id="ID_DOWNLOADS_COPY" text="复制链接(_U)"/>
+			<separator/>
 			<item id="ID_DOWNLOADS_HELP" text="帮助(_H)..."/>
 			<separator/>
 			<item id="ID_DOWNLOADS_EDIT" text="属性(_P)"/>
