--- a/Languages/default-de.xml
+++ b/Languages/default-de.xml
@@ -1108,6 +1108,9 @@
 		<menu name="CDownloadsWnd.Seeding">
 			<item id="ID_DOWNLOADS_LAUNCH_COMPLETE" text="_Öffnen"/>
 			<item id="ID_DOWNLOADS_CLEAR_COMPLETE" text="_Seeden beenden"/>
+			<separator/>
+			<item id="ID_DOWNLOADS_COPY" text="_URI kopieren"/>
+			<separator/>
 			<item id="ID_DOWNLOADS_HELP" text="_Hilfe..."/>
 			<separator/>
 			<item id="ID_DOWNLOADS_EDIT" text="Ei_genschaften..."/>
