--- a/Languages/default-es.xml
+++ b/Languages/default-es.xml
@@ -1108,6 +1108,9 @@
 		<menu name="CDownloadsWnd.Seeding">
 			<item id="ID_DOWNLOADS_LAUNCH_COMPLETE" text="_Abrir o reproducir"/>
 			<item id="ID_DOWNLOADS_CLEAR_COMPLETE" text="_Detener compartir"/>
+			<separator/>
+			<item id="ID_DOWNLOADS_COPY" text="Copiar _URI"/>
+			<separator/>
 			<item id="ID_DOWNLOADS_HELP" text="_Ayuda..."/>
 			<separator/>
 			<item id="ID_DOWNLOADS_EDIT" text="_Información de torrent"/>
