--- a/Languages/default-fr.xml
+++ b/Languages/default-fr.xml
@@ -1108,6 +1108,9 @@
 		<menu name="CDownloadsWnd.Seeding">
 			<item id="ID_DOWNLOADS_LAUNCH_COMPLETE" text="_Ouvrir ou lire"/>
 			<item id="ID_DOWNLOADS_CLEAR_COMPLETE" text="_Stopper le seed"/>
+			<separator/>
+			<item id="ID_DOWNLOADS_COPY" text="Copier l'_URI"/>
+			<separator/>
 			<item id="ID_DOWNLOADS_HELP" text="Ai_de..."/>
 			<separator/>
 			<item id="ID_DOWNLOADS_EDIT" text="_Propriétés..."/>
