--- a/Languages/default-gr.xml
+++ b/Languages/default-gr.xml
@@ -1108,6 +1108,9 @@
 		<menu name="CDownloadsWnd.Seeding">
 			<item id="ID_DOWNLOADS_LAUNCH_COMPLETE" text="_Άνοιγμα"/>
 			<item id="ID_DOWNLOADS_CLEAR_COMPLETE" text="_Ματαίωση Seeding"/>
+			<separator/>
+			<item id="ID_DOWNLOADS_COPY" text="Αντι_γραφή URI"/>
+			<separator/>
 			<item id="ID_DOWNLOADS_HELP" text="_Βοήθεια..."/>
 			<separator/>
 			<item id="ID_DOWNLOADS_EDIT" text="_Ιδιότητες..."/>
