--- a/Languages/default-heb.xml
+++ b/Languages/default-heb.xml
@@ -1108,6 +1108,9 @@
 		<menu name="CDownloadsWnd.Seeding">
 			<item id="ID_DOWNLOADS_LAUNCH_COMPLETE" text="‪_פתח או הפעל"/>
 			<item id="ID_DOWNLOADS_CLEAR_COMPLETE" text="‪הפסק בקשות להעלאות"/>
+			<separator/>
+			<item id="ID_DOWNLOADS_COPY" text="‪...URI העתק"/>
+			<separator/>
 			<item id="ID_DOWNLOADS_HELP" text="‪...ע_זרה"/>
 			<separator/>
 			<item id="ID_DOWNLOADS_EDIT" text="...‪מידע על ה_טורנט"/>
