--- a/Languages/default-it.xml
+++ b/Languages/default-it.xml
@@ -1108,6 +1108,9 @@
 		<menu name="CDownloadsWnd.Seeding">
 			<item id="ID_DOWNLOADS_LAUNCH_COMPLETE" text="Apri/Play"/>
 			<item id="ID_DOWNLOADS_CLEAR_COMPLETE" text="_Ferma condivisione"/>
+			<separator/>
+			<item id="ID_DOWNLOADS_COPY" text="Copia _URI"/>
+			<separator/>
 			<item id="ID_DOWNLOADS_HELP" text="Aiuto..."/>
 			<separator/>
 			<item id="ID_DOWNLOADS_EDIT" text="_Proprietà..."/>
