--- a/Languages/default-pl.xml
+++ b/Languages/default-pl.xml
@@ -1108,6 +1108,9 @@
 		<menu name="CDownloadsWnd.Seeding">
 			<item id="ID_DOWNLOADS_LAUNCH_COMPLETE" text="Otwórz lub odtwarzaj"/>
 			<item id="ID_DOWNLOADS_CLEAR_COMPLETE" text="Zakończ seed'owanie (udostępnianie)"/>
+			<separator/>
+			<item id="ID_DOWNLOADS_COPY" text="Kopiuj _URI"/>
+			<separator/>
 			<item id="ID_DOWNLOADS_HELP" text="Pomoc..."/>
 			<separator/>
 			<item id="ID_DOWNLOADS_EDIT" text="Właściwości, Torrent Info..."/>
