--- a/Languages/default-pt-br.xml
+++ b/Languages/default-pt-br.xml
@@ -1108,6 +1108,9 @@
 		<menu name="CDownloadsWnd.Seeding">
 			<item id="ID_DOWNLOADS_LAUNCH_COMPLETE" text="_Abrir/Tocar"/>
 			<item id="ID_DOWNLOADS_CLEAR_COMPLETE" text="_Parar com o Seeding"/>
+			<separator/>
+			<item id="ID_DOWNLOADS_COPY" text="Copiar _URI..."/>
+			<separator/>
 			<item id="ID_DOWNLOADS_HELP" text="_Ajuda..."/>
 			<separator/>
 			<item id="ID_DOWNLOADS_EDIT" text="_Propriedades..."/>
