--- a/Languages/default-sl-si.xml
+++ b/Languages/default-sl-si.xml
@@ -1108,6 +1108,9 @@
 		<menu name="CDownloadsWnd.Seeding">
 			<item id="ID_DOWNLOADS_LAUNCH_COMPLETE" text="_Odpri ali predvajaj"/>
 			<item id="ID_DOWNLOADS_CLEAR_COMPLETE" text="_Končaj sejanje (seeding)"/>
+			<separator/>
+			<item id="ID_DOWNLOADS_COPY" text="Kopiraj _URI"/>
+			<separator/>
 			<item id="ID_DOWNLOADS_HELP" text="_Pomoč..."/>
 			<separator/>
 			<item id="ID_DOWNLOADS_EDIT" text="_Informacija o Torrentu..."/>
