--- a/Languages/default-sv.xml
+++ b/Languages/default-sv.xml
@@ -1108,6 +1108,9 @@
 		<menu name="CDownloadsWnd.Seeding">
 			<item id="ID_DOWNLOADS_LAUNCH_COMPLETE" text="_Öppna eller spela upp"/>
 			<item id="ID_DOWNLOADS_CLEAR_COMPLETE" text="_Sluta dela ut"/>
+			<separator/>
+			<item id="ID_DOWNLOADS_COPY" text="Kopiera _URI"/>
+			<separator/>
 			<item id="ID_DOWNLOADS_HELP" text="_Hjälp…"/>
 			<separator/>
 			<item id="ID_DOWNLOADS_EDIT" text="_Torrentinformation..."/>
