--- a/Languages/default-tr.xml
+++ b/Languages/default-tr.xml
@@ -1108,6 +1108,9 @@
 		<menu name="CDownloadsWnd.Seeding">
 			<item id="ID_DOWNLOADS_LAUNCH_COMPLETE" text="_Aç/Oynat"/>
 			<item id="ID_DOWNLOADS_CLEAR_COMPLETE" text="_Yükleme Durdur"/>
+			<separator/>
+			<item id="ID_DOWNLOADS_COPY" text="Kopyala _URI"/>
+			<separator/>
 			<item id="ID_DOWNLOADS_HELP" text="_Yardım..."/>
 			<separator/>
 			<item id="ID_DOWNLOADS_EDIT" text="İ_leri Düzenleme..."/>
